[tool.poetry]
name = "spaced repetition"
version = "0.1.0"
description = "Spaced Repetition service"
authors = ["AlekseyLebedik <lebedik.leha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.14.0"
fastapi = "^0.115.6"
pydantic = "^2.10.3"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
pydantic-settings = "^2.6.1"
greenlet = "^3.1.1"
uvicorn = "^0.34.0"
pendulum = "^3.0.0"
python-multipart = "^0.0.20"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
